	* snit.test:   if no options were defined.  It's clearer if the 
	               behavior is always the same.

		       Fixed tcllib bugs item #852945: variable.  The
		       statement "variable ::my::qualified::name" in an
		       instance method now makes "name" available, just
		       as the standard "variable" command does.

2004-02-07  Will Duquette  <will@wjduquette.com>

	* All:         Updated version to 0.93.
	* snit.tcl:    The %AUTO% name counter wraps around to 0 when it
	               reaches 2^31 - 1, to prevent integer overflow
		       errors.
	* snit.html:   Minor corrections and updates.
	* faq.html

2003-12-06  Will Duquette  <will@wjduquette.com>

	* All:         Updated version to 0.92.

	* snit.tcl     Snit now propagates errorCode properly when 
	* snit.test    propagating errors.

2003-12-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* snit.man:    Updated to changes in the .html files.
	* snitfaq.man: 

2003-11-21  Will Duquette  <will@wjduquette.com>

	* snit.tcl:      Updated version to 0.91.
	* pkgIndex.tcl: 

	* snit.tcl:      Added the "expose" statement to type and widget
	                 definitions.
	* snit.test:     Added appropriate tests.
	* snit.html:     Added documentation for "expose".
	* faq.html:      Updated the FAQ entries.

	* snit.tcl:      Added "string match" patterns to the Snit info
	                 methods.
	* snit.test:     Added appropriate tests.
	* snit.html:     Updated documentation.


2003-10-28  Andreas Kupries  <andreask@activestate.com>

	* snit.man:    Fixed typos in documentation.
	* snitfaq.man: 

2003-10-27  Will Duquette  <will@wjduquette.com>

	* snit.html: Fixed typos in documentation.
	* faq.html:

2003-10-27  Andreas Kupries  <andreask@activestate.com>

	* snit.man:    Updated to changes in the .html files.
	* snitfaq.man: 

2003-10-25  Will Duquette  <will@wjduquette.com>

	* snit.tcl:  Added the "except" clause for "delegate method *" and